--- a/our-work.html
+++ b/our-work.html
@@ -89,7 +89,7 @@
             </div>
             <div class="row pt-0">
                 <div class="filter filter-by filter-btns">
-                    <a href="#basements" class="btn btn-outline">Basements</a>
+                    <a href="/basement-renovations#our-work" class="btn btn-outline">Basements</a>
                     <a href="#kitchens" class="btn btn-outline">Kitchens</a>
                     <a href="#fences" class="btn btn-outline">Fences</a>
                     <a href="#roofing" class="btn btn-outline">Roofing</a>
