--- a/our-work.html
+++ b/our-work.html
@@ -90,17 +90,17 @@
             <div class="row pt-0">
                 <div class="filter filter-by filter-btns">
                     <a href="/basement-renovations#our-work" class="btn btn-outline">Basements</a>
-                    <a href="#kitchens" class="btn btn-outline">Kitchens</a>
-                    <a href="#fences" class="btn btn-outline">Fences</a>
-                    <a href="#roofing" class="btn btn-outline">Roofing</a>
-                    <a href="#decks" class="btn btn-outline">Decks</a>
-                    <a href="#pergolas" class="btn btn-outline">Pergolas</a>
-                    <a href="#siding" class="btn btn-outline">Siding</a>
-                    <a href="#garages" class="btn btn-outline">Garages</a>
-                    <a href="#home-additions" class="btn btn-outline">Home Additions</buatton>
-                        <a href="#shouses" class="btn btn-outline">Shed Houses "Shouses"</a>
-                        <a href="#commercial" class="btn btn-outline">Ag & Commercial Buildings</a>
-                        <a href="#event-venues" class="btn btn-outline">Event Venues</a>
+                    <a href="/kitchen-renovations#our-work" class="btn btn-outline">Kitchens</a>
+                    <a href="/fences#our-work" class="btn btn-outline">Fences</a>
+                    <a href="/roofing#our-work" class="btn btn-outline">Roofing</a>
+                    <a href="/deck-pergolas#our-work" class="btn btn-outline">Decks</a>
+                    <a href="/pergolas#our-work" class="btn btn-outline">Pergolas</a>
+                    <a href="/siding#our-work" class="btn btn-outline">Siding</a>
+                    <a href="/garages#our-work" class="btn btn-outline">Garages</a>
+                    <a href="/exterior-remodeling#our-rowk" class="btn btn-outline">Home Additions</buatton>
+                    <a href="/shed-homes-shouses#our-work" class="btn btn-outline">Shed Houses "Shouses"</a>
+                    <a href="/agriculture-commercial-buildings#our-work" class="btn btn-outline">Ag & Commercial Buildings</a>
+                    <a href="/event-venues#our-work" class="btn btn-outline">Event Venues</a>
                 </div>
             </div>
         </div>
