--- a/deck-pergolas.html
+++ b/deck-pergolas.html
@@ -104,7 +104,7 @@
         </div>
         <div class="text-align-left" id="our-work">
             <br />
-            <h4 class="h1">Our Work</h4>
+            <h4 class="h1" id="our-work">Our Work</h4>
             <div class="our-work-images">
                 <img class="our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeck.jpg"
                     alt="Composite Deck">
