--- a/event-venues.html
+++ b/event-venues.html
@@ -83,7 +83,7 @@
         </div>
         <div class="text-align-left">
             <br />
-            <h4 class="h1">Our Work</h4>
+            <h4 class="h1" id="our-work">Our Work</h4>
             <div class="our-work-images">
                 <img class="our-work-image"
                     src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png">
