--- a/fencing.html
+++ b/fencing.html
@@ -62,7 +62,6 @@
 </head>
 
 <body>
-    <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav fencing">
         <div class="hero-nav__inner">
@@ -121,7 +120,7 @@
                 <a class="btn btn-primary" href="/contac">Contact Us</a>
             </div>
             <br />
-            <h4 class="h1">Our Work</h4>
+            <h4 class="h1" id="our-work">Our Work</h4>
             <div class="our-work-images">
                 <img class="our-work-image"
                     src="https://d319epilr9o2mf.cloudfront.net/work/fencing/CRTreatedWoodFence.jpg"
