--- a/garages.html
+++ b/garages.html
@@ -62,7 +62,6 @@
 </head>
 
 <body>
-    <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav garages">
         <div class="hero-nav__inner">
@@ -89,7 +88,7 @@
         </div>
         <div class="text-align-left">
             <br />
-            <h3 class="h1">Our Work</h4>
+            <h3 class="h1" id="our-work">Our Work</h4>
                 <div class="our-work-images">
                     <img class="our-work-image"
                         src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg"
@@ -112,5 +111,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/script.min.js"></script>
 </body>
-
 </html>
