--- a/pergolas.html
+++ b/pergolas.html
@@ -63,7 +63,6 @@
 </head>
 
 <body>
-    <!-- <div id="preloader"></div> -->
     <nav id="navbar"></nav>
     <div class="hero-nav pergola">
         <div class="hero-nav__inner">
@@ -114,7 +113,7 @@
         <br />
         <div class="text-align-left">
             <br />
-            <h4 class="h1">Our Work</h4>
+            <h4 class="h1" id="our-work">Our Work</h4>
             <div class="our-work-images">
                 <img class="our-work-image"
                     src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhanghomeaddition.jpg"
