--- a/siding.html
+++ b/siding.html
@@ -125,7 +125,7 @@
         <br />
         <div class="text-align-left">
             <br />
-            <h4 class="h1" id="our-work">Boost Your Curb Appeal With New Siding</h4>
+            <h4 class="h1">Boost Your Curb Appeal With New Siding</h4>
             <p>T.E.A.M. Builders offers siding repair and installation services in Cedar Falls and Cedar Rapids, IA and
                 surrounding areas. Installing new siding will:</p>
             <ol>
@@ -134,7 +134,7 @@
                 <li>Splurge on a few high-end materials</li>
                 <li>Create the look of your dream home</li>
             </ol>
-            <h4 class="h1">Our Work</h4>
+            <h4 class="h1" id="our-work">Our Work</h4>
             <div class="our-work-images">
                 <img class="our-work-image"
                     src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingCR.jpg"
