--- a/our-work.html
+++ b/our-work.html
@@ -140,6 +140,7 @@
             <img class="basements our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/basement-renovations/basement-work-space.jpg"
                 alt="Basement Workspace">
+                <!-- Basements -->
             <img class="kitchens our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/brassFaucet.jpg"
                 alt="Brass Faucet">
@@ -239,6 +240,7 @@
             <img class="kitchens our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/white-backsplash-kitchen-renovation.png"
                 alt="White Backsplash and Countertops Kitchen Renovation">
+                <!-- Fences -->
             <img class="fences our-work-image"
                 src="https://d319epilr9o2mf.cloudfront.net/work/fencing/CRTreatedWoodFence.jpg"
                 alt="Treated Wood Fence Cedar Rapids">
@@ -272,6 +274,7 @@
             <img class="fences our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/fencing/IMG_4690.jpg"
                 alt="Black Wire Fence">
+                <!-- Decks -->
             <img class="decks our-work-image" src="https://d319epilr9o2mf.cloudfront.net/work/decks/compositeDeck.jpg"
                 alt="Composite Deck">
             <img class="decks our-work-image"
@@ -307,157 +310,157 @@
             <img class="decks our-work-image"
                 src="https://d319epilr9o2mf.cloudfront.net/work/decks/twoTonedStepsUpClose.jpg"
                 alt="Up Close View of Two Tone Composite Steps">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/back-deck-side-view.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/deck-swing.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/170675172_1440051539679610_1279784568954226672_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/174618365_1453293065022124_7999413607796807436_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/overhead-deck-garden.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/162896326_1426119447739486_1187857263839408051_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/162307164_1425350961149668_7074777131906307346_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/162164516_1425350917816339_4016378227427908506_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/152018521_1405179233166841_3234738522495045876_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/151624665_1405179286500169_2014828265406395400_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/177369989_1450421585309272_9192953740431817130_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/178837981_1453293125022118_2702310795059242818_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/178997967_1453293091688788_9121514850555641930_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/147419252_1396824620668969_102660472874828260_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/179147691_1453293171688780_719442803783550624_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/118003423_1261807217504044_2831321638943334113_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/119700099_1287183998299699_7583208218865987243_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120064324_1292318424452923_7104787214922998174_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120382926_1299027360448696_5531663830282172161_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120430985_1299027467115352_4118174335850720249_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/120444019_1299027390448693_2412352650442264840_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/135566824_1378732102478221_4209403212040887739_n-1-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/137560876_1381373012214130_3739285999963849537_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/139450499_1387011384983626_309734983980755243_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/139572517_1387011378316960_3222409254013743299_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/139905534_1387011374983627_7953001270586387941_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/141043392_1387006684984096_3916403393583582807_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/141064013_1387008364983928_158201563143739039_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/141274040_1387006808317417_8590356324950134272_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103278923_1207784249573008_8788406610358348311_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/103602998_1206221236395976_8387010408663070491_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/89962803_1140484772969623_2989750769382588416_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/72476943_1005014923183276_4188668904123400192_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/69313116_963778657306903_1508990008730583040_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/104468340_1214020765616023_4851588549247669318_n-min.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/72319801_1004989043185864_1142861226615767040_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/72361820_1005014929849942_9166122588110323712_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/69278448_964323767252392_5385661703809662976_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/69097080_964323763919059_5251193416007548928_n-2.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/68974798_964323747252394_1572069154024849408_n-2.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/64555012_915475592137210_7760663384525111296_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/57076244_874754499542653_4237073103944941568_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/51233367_831143193903784_8391211192563007488_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/45745335_777062705978500_921603052899663872_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/45730411_777062595978511_4625406699476353024_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/45591174_777062629311841_3433539406386954240_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/41223398_742881119396659_10894592568197120_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/41190218_742881166063321_6410687350153674752_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/38054456_707910839560354_7240150723055321088_n.jpg"
                 alt="New Deck Floorplan">
-            <img class="decks our-work-image lazyload"
+            <img class="decks our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/37371442_697460747272030_2030087116465111040_n.jpg"
                 alt="New Deck Floorplan">
-
+                <!-- Roofing -->
             <img class="roofing our-work-image"
                 src="https://d319epilr9o2mf.cloudfront.net/work/roofing/aerialViewNewRoof.jpg"
                 alt="Aerial View of New Roof">
@@ -683,6 +686,7 @@
             <img class="roofing our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/decks/37371442_697460747272030_2030087116465111040_n.jpg"
                 alt="New Deck Floorplan">
+                <!-- Pergolas -->
             <img class="pergolas our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/overhanghomeaddition.jpg"
                 alt="Overhang Home Addition">
@@ -734,6 +738,7 @@
             <img class="pergolas our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/pergolas/p4.jpg"
                 alt="Pergola with Shingles and Siding">
+                <!-- Siding -->
             <img class="siding our-work-image"
                 src="https://d319epilr9o2mf.cloudfront.net/work/siding/blueVinylSidingCR.jpg"
                 alt="Blue Vinyl Siding in Cedar Rapids">
@@ -795,9 +800,11 @@
             <img class="siding our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/siding/Siding_3.jpg"
                 alt="Siding Tan House">
+                <!-- Garages -->
             <img class="garages our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/IMG_0115.jpg"
                 alt="2 Stall Garage w/ Orange Accents">
+                <!-- Home Additions -->
             <img class="home-additions our-work-image"
                 src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/home+additions.JPG" alt="Home Additions">
             <img class="home-additions our-work-image"
@@ -818,6 +825,7 @@
             <img class="home-additions our-work-image"
                 src="https://d319epilr9o2mf.cloudfront.net/work/home-additions/seamlessBlueHomeAddition.jpg"
                 alt="Seamless Blue Home Addition">
+                <!-- Shouses -->
             <img class="shouses our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/farm-shed.png"
                 alt="Farm Shed">
@@ -830,6 +838,7 @@
             <img class="shouses our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/shed-houses/104325409_1212319002452866_4642715789160996502_n.jpg"
                 alt="Shed w/ Small Deck and Chairs">
+                <!-- Ag & Commercial Buildings -->
             <img class="commercial our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/7.png"
                 alt="Agricultural Building">
@@ -839,6 +848,7 @@
             <img class="commercial our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/commercial/farm-shed.png"
                 alt="Farm Shed">
+                <!-- Event Venues -->
             <img class="event-venues our-work-image"
                 src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/event-venues/event-venue-1.png"
                 alt="Event Venue 1">
