--- a/about-t-e-a-m-builders.html
+++ b/about-t-e-a-m-builders.html
@@ -19,6 +19,11 @@
     gtag('js', new Date());
     gtag('config', 'UA-188956910-1');
     </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 618639015 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-618639015"></script> 
+    <script> 
+        window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-618639015');
+    </script>
     <!-- Mailchimp -->
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/3505b437145ee33b184d2b30a/4b299f4ad6c300bf5979542d3.js");</script>
     <!-- Facebook Pixel Code -->
