--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
         gtag('js', new Date());
         gtag('config', 'UA-188956910-1');
     </script>
+    <!-- Global site tag (gtag.js) - Google Ads: 618639015 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-618639015"></script> 
+    <script> 
+        window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-618639015');
+    </script>
     <!-- Facebook Pixel Code -->
     <script>
         ! function (f, b, e, v, n, t, s) {
