add new kitchen images

--- a/index.html
+++ b/index.html
@@ -27,11 +27,6 @@
         gtag('js', new Date());
         gtag('config', 'UA-188956910-1');
     </script>
-    <!-- Global site tag (gtag.js) - Google Ads: 618639015 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-618639015"></script> 
-    <script> 
-        window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-618639015');
-    </script>
     <!-- Facebook Pixel Code -->
     <script>
         ! function (f, b, e, v, n, t, s) {
@@ -144,8 +139,7 @@
                 <h3><a href="/kitchen-renovations">Kitchen</a></h3>
             </div>
             <div class="service-card-image">
-                <img src="https://d319epilr9o2mf.cloudfront.net/work/kitchen-renovations/kitchen-renovation-island.jpeg"
-                    alt="Kitchen" class="lazyload">
+                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Jone+kitchen+remodel+appliances+-+Grundy+Center+-+Watermarked.png" alt="White kitchen cabinets with under cabinet lighting on granite countertops Cedar Falls after kitchen remodel">
             </div>
         </div>
     </div>
