add new kitchen images

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 <h3><a href="/kitchen-renovations">Kitchen</a></h3>
             </div>
             <div class="service-card-image">
-                <img class="our-work-image" src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Jone+kitchen+remodel+appliances+-+Grundy+Center+-+Watermarked.png" alt="White kitchen cabinets with under cabinet lighting on granite countertops Cedar Falls after kitchen remodel">
+                <img src="https://teambuilders-media.s3.us-east-2.amazonaws.com/work/kitchen-renovations/Jone+kitchen+remodel+appliances+-+Grundy+Center+-+Watermarked.png" alt="White kitchen cabinets with under cabinet lighting on granite countertops Cedar Falls after kitchen remodel">
             </div>
         </div>
     </div>
